--- a/com.phptravels.cucumber/.project
+++ b/com.phptravels.cucumber/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.phptravels.cucumber</name>
+	<name>com.freecrm.cucumber</name>
 	<comment></comment>
 	<projects>
 	</projects>
