--- a/com.phptravels.cucumber/src/test/resources/TestData/Config.properties
+++ b/com.phptravels.cucumber/src/test/resources/TestData/Config.properties
@@ -1,2 +1,9 @@
 Url=https://www.freecrm.com
 Browser=Chrome
+Emailid=nishant_online@rediffmail.com
+Password=23Jan2007
+FirstName=Deepika
+LastName=Gupta
+ContactEmailID=deepika2307@gmail.com
+DayOfBirth=10
+MonthOfBirth=Sep
